--- a/BestBuyBestPractices/BestBuyBestPractices.csproj
+++ b/BestBuyBestPractices/BestBuyBestPractices.csproj
@@ -1,9 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.26" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Update="appsettings.json">
